--- a/app.html
+++ b/app.html
@@ -32,7 +32,7 @@
     .grid2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     .grid4{display:grid;grid-template-columns:1.2fr .8fr .8fr 110px;gap:10px;align-items:center}
     .btn{cursor:pointer;border:0;border-radius:10px;padding:10px 14px;font-weight:600}
-    .btn-primary{background:var(--primary);color:#fff}
+    .btn-primary{background:var(--primary);color:#fff} .btn-primary:disabled{background:#1e40af; cursor: not-allowed;}
     .btn-ghost{background:transparent;color:var(--text);border:1px solid var(--line)}
     .btn-danger{background:var(--danger);color:#fff}
     .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
@@ -47,15 +47,11 @@
     .topbar{position:fixed;inset:0 0 auto 0;height:3px;background:transparent;z-index:20}
     .bar{height:100%;width:0;background:var(--bar);transition:width .2s linear}
     .section{margin-bottom:16px}
-
-    /* Modal */
     .modal-back{position:fixed;inset:0;background:rgba(0,0,0,.55);display:none;align-items:center;justify-content:center;z-index:30}
     .modal{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:18px;max-width:520px;width:96%}
     .modal h3{margin:0 0 8px}
     .modal .row{justify-content:flex-end}
     .chip-ok{padding:2px 8px;border-radius:999px;background:#064e3b;color:#a7f3d0;font-size:12px}
-
-    /* datalist “grande” para cidades */
     datalist option{color:#000}
   </style>
 </head>
@@ -161,10 +157,8 @@
     </div>
   </div>
 
-  <!-- datalist de cidades (preenchido via IBGE) -->
   <datalist id="listaCidades"></datalist>
 
-  <!-- Modal “completar cadastro” quando telefone não encontrado -->
   <div id="modalCad" class="modal-back">
     <div class="modal">
       <h3>Cadastro não encontrado</h3>
@@ -180,7 +174,6 @@
     </div>
   </div>
 
-  <!-- Modal de sucesso com botões de WhatsApp -->
   <div id="modalOk" class="modal-back">
     <div class="modal">
       <h3>Romaneio enviado com sucesso <span id="codChave" class="chip-ok"></span></h3>
@@ -196,7 +189,8 @@
 
 <script>
 /* ====== CONFIG ====== */
-const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
+// FIX: A URL da API é derivada da URL atual para evitar erros de template.
+const API_BASE = location.href.split('?')[0];
 
 /* ====== Infra UI ====== */
 const $ = s => document.querySelector(s);
@@ -215,26 +209,41 @@ function setTheme(t){ document.documentElement.setAttribute('data-theme',t); loc
 $('#btnTheme').onclick = ()=> setTheme(document.documentElement.getAttribute('data-theme')==='dark'?'light':'dark');
 
 /* ====== Sessão ====== */
-const sess = (function(){ try{return JSON.parse(localStorage.getItem('session')||localStorage.getItem('rom_session')||'{}')}catch(_){return{}} })();
-if(!sess.token){ location.href='index.html'; }
-$('#who').textContent = (sess.usuario||'admin') + (sess.role ? (' · ' + sess.role) : '');
+const sess = (function(){ try{return JSON.parse(localStorage.getItem('rom_session')||'{}')}catch(_){return{}} })();
+if(!sess.token){ location.href = API_BASE + "?view=index"; }
+(async () => {
+    try {
+        const r = await post('/me', {});
+        if (r.error) throw new Error(r.error);
+        $('#who').textContent = r.me;
+    } catch (e) {
+        localStorage.removeItem('rom_session');
+        location.href = API_BASE + "?view=index";
+    }
+})();
 
 /* ====== Logout ====== */
-$('#logout').onclick = async (e)=>{ e.preventDefault(); try{ await post('/logout',{}) }catch(_){ } localStorage.removeItem('session'); localStorage.removeItem('rom_session'); location.href='index.html'; };
+$('#logout').onclick = async (e)=>{ e.preventDefault(); try{ await post('/logout',{}) }catch(_){ } localStorage.removeItem('rom_session'); location.href= API_BASE + "?view=index"; };
 
 /* ====== Helpers ====== */
 function onlyDigits(s){ return (s||'').replace(/\D+/g,'') }
 function maskPhone(el){
-  let d = onlyDigits(el.value).slice(0,11); // 10 ou 11
-  if(d.length<=10){ // fixo (2+8)
-    el.value = d.replace(/^(\d{0,2})(\d{0,4})(\d{0,4}).*/, (_,a,b,c)=> (a?`(${a}`:'') + (a&&a.length===2?') ':'') + (b||'') + (b&&c?'-':'') + (c||'') );
-  }else{ // celular (2+9)
-    el.value = d.replace(/^(\d{0,2})(\d{0,5})(\d{0,4}).*/, (_,a,b,c)=> (a?`(${a}`:'') + (a&&a.length===2?') ':'') + (b||'') + (b&&c?'-':'') + (c||'') );
-  }
+  let d = onlyDigits(el.value).slice(0,11);
+  if(d.length<=10){ el.value = d.replace(/^(\d{0,2})(\d{0,4})(\d{0,4}).*/, (_,a,b,c)=> (a?`(${a}`:'') + (a&&a.length===2?') ':'') + (b||'') + (b&&c?'-':'') + (c||'') ); }
+  else{ el.value = d.replace(/^(\d{0,2})(\d{0,5})(\d{0,4}).*/, (_,a,b,c)=> (a?`(${a}`:'') + (a&&a.length===2?') ':'') + (b||'') + (b&&c?'-':'') + (c||'') ); }
 }
 ['#cli_tel','#for_tel'].forEach(sel=>{
   const el=$(sel); el.addEventListener('input',()=>maskPhone(el)); el.addEventListener('blur',()=>tryLookup(sel.includes('cli')?'cliente':'fornecedor'));
 });
+
+// Auto-preencher data ao digitar ROM
+$('#rom').addEventListener('input', () => {
+    $('#data').value = todayISO();
+});
+
+// Acionar busca ao focar nos campos de nome
+$('#cli_nome').addEventListener('focus', () => tryLookup('cliente'));
+$('#for_nome').addEventListener('focus', () => tryLookup('fornecedor'));
 
 /* ====== API ====== */
 async function post(path, body={}){
@@ -245,27 +254,30 @@ async function post(path, body={}){
       body: JSON.stringify({...body, token:sess.token})
     });
     barDone();
+    if (!r.ok) {
+        const errData = await r.json().catch(() => ({error: `HTTP ${r.status}`}));
+        throw new Error(errData.error || `HTTP ${r.status}`);
+    }
     return await r.json();
   }catch(e){ barDone(); throw e }
 }
 
 /* ====== Cidades (IBGE) ====== */
-let cidades = []; // [{nome, uf, label}]
+let cidades = [];
 async function loadCidades(){
   try{
     const r = await fetch('https://servicodados.ibge.gov.br/api/v1/localidades/municipios?orderBy=nome');
     const arr = await r.json();
     cidades = arr.map(x=>({nome:x.nome, uf:x.microrregiao.mesorregiao.UF.sigla, label:`${x.nome}/${x.microrregiao.mesorregiao.UF.sigla}`}));
     fillDatalist('');
-  }catch(_){ /* silencia */ }
+  }catch(_){ console.error("Falha ao carregar cidades do IBGE"); }
 }
 function fillDatalist(prefix){
   const dl = $('#listaCidades'); dl.innerHTML='';
   const p = (prefix||'').toLowerCase();
-  const take = p.length>=3 ? cidades.filter(c=>c.label.toLowerCase().includes(p)).slice(0,50) : cidades.slice(0,0);
-  take.forEach(c=>{
-    const o=document.createElement('option'); o.value=c.label; dl.appendChild(o);
-  });
+  // Alterado para 3 letras, conforme solicitado
+  const take = p.length>=3 ? cidades.filter(c=>c.label.toLowerCase().includes(p)).slice(0,50) : [];
+  take.forEach(c=>{ const o=document.createElement('option'); o.value=c.label; dl.appendChild(o); });
 }
 ['#cli_cidade_uf','#for_cidade_uf','#cadCidade'].forEach(sel=>{
   const el=$(sel); el.addEventListener('input',()=>fillDatalist(el.value));
@@ -279,8 +291,7 @@ const itensDiv = $('#itens');
 const totalQtdEl = $('#totalQtd');
 function somaTotal(){ let t=0; document.querySelectorAll('.qtd').forEach(i=> t += Number(i.value||0)); totalQtdEl.textContent = t; }
 function itemRow(){
-  const row = document.createElement('div');
-  row.className='grid4';
+  const row = document.createElement('div'); row.className='grid4';
   const selTipo = document.createElement('select'); tipos.forEach(t=>{ const o=document.createElement('option'); o.value=t; o.textContent=t; selTipo.appendChild(o) });
   const selTam  = document.createElement('select'); tamanhos.forEach(t=>{ const o=document.createElement('option'); o.value=t; o.textContent=t; selTam.appendChild(o) });
   const qtd     = document.createElement('input');  qtd.type='number'; qtd.min='1'; qtd.value='1'; qtd.className='qtd'; qtd.oninput=somaTotal;
@@ -314,15 +325,18 @@ function renderThumbs(){
 function fileToDataURL(file){ return new Promise((res,rej)=>{ const r=new FileReader(); r.onload=()=>res(r.result); r.onerror=rej; r.readAsDataURL(file); }); }
 
 /* ====== Form helpers ====== */
-function todayISO(){ const d=new Date(); return d.toISOString().slice(0,10) }
+function todayISO(){ return new Date().toISOString().slice(0,10) }
 $('#data').value = todayISO();
 $('#limpar').onclick = clearForm;
 function clearForm(){
   $('#rom').value=''; $('#obs').value='';
-  ['#cli_tel','#cli_nome','#cli_cidade_uf','#for_tel','#for_nome','#for_cidade_uf'].forEach(s=>$(s).value='');
+  ['#cli_tel','#cli_nome','#cli_cidade_uf','#for_tel','#for_nome','#for_cidade_uf'].forEach(s=>{$(s).value=''; $(s).style.borderColor='';});
+  ['#cli_status', '#for_status'].forEach(s => $(s).style.display='none');
   itensDiv.innerHTML=''; itensDiv.appendChild(itemRow()); somaTotal();
   fileInput.value=''; fotosData=[]; renderThumbs();
   $('#msg').style.display='none';
+  $('#data').value = todayISO();
+  pendenteCadastro = {cliente:false, fornecedor:false};
 }
 
 /* ====== Lookup por telefone ====== */
@@ -345,15 +359,14 @@ async function tryLookup(tipo){
       (tipo==='cliente') ? pendenteCadastro.cliente=false : pendenteCadastro.fornecedor=false;
       return;
     }
-    // não encontrado → pedir nome/cidade
     await abrirModalCadastro(tipo, nomeEl.value, cidEl.value);
-  }catch(_){
-    // se API não existir, apenas segue sem travar
+  }catch(e){
+    console.error("API /contacts/find falhou, continuando...", e);
   }
 }
 function abrirModalCadastro(tipo, nomeAtual, cidAtual){
   return new Promise(res=>{
-    $('#cadQuem').textContent = `Cadastro de ${tipo} não encontrado.`;
+    $('#cadQuem').textContent = `Cadastro de ${tipo} não encontrado. Complete os dados.`;
     $('#cadNome').value = nomeAtual||'';
     $('#cadCidade').value = cidAtual||'';
     $('#modalCad').style.display='flex';
@@ -361,6 +374,7 @@ function abrirModalCadastro(tipo, nomeAtual, cidAtual){
     $('#cadOk').onclick = ()=>{
       const nome = $('#cadNome').value.trim();
       const cidade = $('#cadCidade').value.trim();
+      if(!nome || !cidade){ alert("Nome e Cidade são obrigatórios."); return; }
       if(tipo==='cliente'){ $('#cli_nome').value=nome; $('#cli_cidade_uf').value=cidade; pendenteCadastro.cliente=true; }
       else { $('#for_nome').value=nome; $('#for_cidade_uf').value=cidade; pendenteCadastro.fornecedor=true; }
       $('#modalCad').style.display='none';
@@ -371,50 +385,54 @@ function abrirModalCadastro(tipo, nomeAtual, cidAtual){
 
 /* ====== Enviar ====== */
 $('#enviar').onclick = async ()=>{
-  const rom = Number($('#rom').value);
-  const data = $('#data').value;
-  const obs  = $('#obs').value.trim();
+  const data = {
+    rom: Number($('#rom').value),
+    data: $('#data').value,
+    obs:  $('#obs').value.trim(),
+    cliente: {tel:$('#cli_tel').value.trim(), nome:$('#cli_nome').value.trim(), local:$('#cli_cidade_uf').value.trim(), cadastrar:pendenteCadastro.cliente},
+    fornecedor: {tel:$('#for_tel').value.trim(), nome:$('#for_nome').value.trim(), local:$('#for_cidade_uf').value.trim(), cadastrar:pendenteCadastro.fornecedor},
+    itens: [],
+    fotos: fotosData.map(d=>({data:d}))
+  };
 
-  const cli_tel  = $('#cli_tel').value.trim();
-  const cli_nome = $('#cli_nome').value.trim();
-  const cli_cid  = $('#cli_cidade_uf').value.trim();
-
-  const for_tel  = $('#for_tel').value.trim();
-  const for_nome = $('#for_nome').value.trim();
-  const for_cid  = $('#for_cidade_uf').value.trim();
-
-  const itens = [];
   itensDiv.querySelectorAll('.grid4').forEach(row=>{
     const [t,s,q] = row.querySelectorAll('select, input');
     const qtd = Number(q.value||0);
-    if(qtd>0) itens.push({tipo:t.value,tamanho:s.value,qtd});
+    if(qtd>0) data.itens.push({tipo:t.value,tamanho:s.value,qtd});
   });
+  
+  // Validações
+  let missing = [];
+  if(!data.rom) missing.push($('#rom'));
+  if(!data.data) missing.push($('#data'));
+  if(!data.cliente.tel || !data.cliente.nome || !data.cliente.local) missing.push($('#cli_tel'), $('#cli_nome'), $('#cli_cidade_uf'));
+  if(!data.fornecedor.tel || !data.fornecedor.nome || !data.fornecedor.local) missing.push($('#for_tel'), $('#for_nome'), $('#for_cidade_uf'));
+  
+  document.querySelectorAll('input').forEach(i => i.style.borderColor='');
+  if(missing.length > 0){
+    missing.forEach(el => el.style.borderColor='var(--danger)');
+    msg('err','Campos obrigatórios ausentes (em vermelho)');
+    missing[0].focus();
+    return;
+  }
+  if(!data.itens.length){ msg('err','Adicione ao menos um item'); return }
 
-  // validações
-  if(!rom || !data || !cli_tel || !cli_nome || !cli_cid || !for_tel || !for_nome || !for_cid){ msg('err','Campos obrigatórios ausentes'); return }
-  if(!itens.length){ msg('err','Adicione ao menos um item'); return }
+  $('#enviar').disabled = true;
+  msg('ok', 'Enviando, aguarde...');
 
   try{
-    const body = {
-      rom, data, obs,
-      cliente: {tel:cli_tel, nome:cli_nome, local:cli_cid, cadastrar:pendenteCadastro.cliente},
-      fornecedor: {tel:for_tel, nome:for_nome, local:for_cid, cadastrar:pendenteCadastro.fornecedor},
-      itens,
-      fotos: fotosData.map(d=>({data:d}))
-    };
-    const r = await post('/rom/create', body);
+    const r = await post('/rom/create', data);
     if(r.error){ msg('err', r.error); return }
 
-    // Mostra modal de sucesso
-    const codigo = r.cod || r.codigo || r.id || '';
+    const codigo = r.cod;
     $('#codChave').textContent = `cod ${codigo}`;
-    const pdfUrl = r.pdfUrl || r.pdf || r.driveUrl || ''; // BACKEND deve tornar público (ver nota abaixo)
+    const pdfUrl = r.pdfUrl;
     $('#btnPdf').onclick = ()=>{ if(pdfUrl) window.open(pdfUrl,'_blank') };
 
     const wmsg = (alvo) => {
-      const tel = onlyDigits(alvo==='cli' ? cli_tel : for_tel);
+      const tel = onlyDigits(alvo==='cli' ? data.cliente.tel : data.fornecedor.tel);
       if(!tel){ return }
-      const texto = `Romaneio ${rom} (cod ${codigo})%0ACliente: ${cli_nome}%0AFornecedor: ${for_nome}%0AData: ${data}%0AItens: ${itens.map(i=>`${i.qtd} ${i.tipo} ${i.tamanho}`).join(', ')}${pdfUrl?`%0AComprovante: ${pdfUrl}`:''}`;
+      const texto = `Romaneio ${data.rom} (cod ${codigo})%0ACliente: ${data.cliente.nome}%0AFornecedor: ${data.fornecedor.nome}%0AItens: ${data.itens.map(i=>`${i.qtd} ${i.tipo} ${i.tamanho}`).join(', ')}${pdfUrl?`%0AComprovante: ${pdfUrl}`:''}`;
       window.open(`https://wa.me/55${tel}?text=${texto}`,'_blank');
     };
     $('#btnWappCli').onclick = ()=>wmsg('cli');
@@ -422,35 +440,15 @@ $('#enviar').onclick = async ()=>{
     $('#modalOk').style.display='flex';
     $('#btnOkClose').onclick = ()=>{ $('#modalOk').style.display='none'; };
 
-    // limpa form para novo envio
     clearForm();
-    msg('ok', `Enviado! Código: ${codigo}`);
+    msg('ok', `Enviado com sucesso! Código: ${codigo}`);
   }catch(e){
     msg('err','Erro de rede: '+e);
+  } finally {
+    $('#enviar').disabled = false;
   }
 };
 </script>
-
-<!--
-IMPORTANTE (para o PDF NÃO pedir login):
-
-No seu Apps Script, após criar o arquivo no Drive, torne-o público:
-
-const file = DriveApp.createFile(blob).setName(nomePdf);
-Drive.Permissions.create(
-  {type: "anyone", role: "reader"},
-  file.getId(),
-  {supportsAllDrives: true}
-);
-// Devolva ao front: { pdfUrl: file.getUrl(), ... }
-
-Também crie o endpoint /contacts/find (opcional):
-- Entrada: {tipo:"cliente"|"fornecedor", tel:"(85) 9..."}
-- Saída quando achou: {found:true, nome:"...", cidade_uf:"Fortaleza/CE"}
-- Saída quando não achou: {found:false}
-
-Se não existir, o front continua funcionando: o usuário preenche e, ao enviar,
-o back-end pode cadastrar usando as flags "cadastrar" enviadas.
--->
 </body>
 </html>
+
